fix: dark mode colors

--- a/web/src/styles/themes/dark.scss
+++ b/web/src/styles/themes/dark.scss
@@ -1,8 +1,8 @@
 $theme-dark: (
-  body-bg-color: #292929,
+  body-bg-color: #303030,
   primary-bg-color: #121212,
   secondary-bg-color: #2b2b2b,
-  border-color: rgba(241, 93, 93, 0.1),
+  border-color: #383838,
   primary-text-color: #e1e1e1,
   secondary-text-color: gray,
   link-color: #5d9cff,
